Add kbean configuration for test include pattern, compilation fork, and docker jvm options.